--- a/AweSimConnect/Properties/Resources.resx
+++ b/AweSimConnect/Properties/Resources.resx
@@ -124,7 +124,7 @@
   <data name="redlight" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\redlight.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="awesim-sm" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="awesimsm" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\awesim-sm.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="greenlight" type="System.Resources.ResXFileRef, System.Windows.Forms">
