--- a/AweSimConnect/Properties/Resources.resx
+++ b/AweSimConnect/Properties/Resources.resx
@@ -202,4 +202,7 @@
   <data name="wireframe_globe" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\wireframe-globe.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="vncviewer" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\vncviewer.exe;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
