Add WinSCP to resources.

--- a/AweSimConnect/Properties/Resources.resx
+++ b/AweSimConnect/Properties/Resources.resx
@@ -5276,4 +5276,7 @@
         WwEA/Kn901yhjA+M9D//8/8BmeBcAyaxltEAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="WinSCP" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\WinSCP.exe;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
