Experimenting with logo

--- a/AweSimConnect/Properties/Resources.resx
+++ b/AweSimConnect/Properties/Resources.resx
@@ -1078,216 +1078,8 @@
         a51of4I4N/2Nv/H/A5hTOXI36jGnAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="awesim_logo" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAcYAAACfCAYAAABjlHmiAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAABh0RVh0U29mdHdhcmUAcGFpbnQubmV0IDQuMC41ZYUyZQAAL+ZJREFUeF7tnd/R
-        /K6R7jcEnwwcgkPwzbl3CA7BEWz9qjYAh+AQHIJD8MUJwCE4hD2fZxZmexhaAgkk9H77qeqaGWiaP4Ju
-        aEDzH4FAIBAIBAKBQCAQCAQCgUAgEAgEAoFb8P/+z//9HfT79DMQCAQCgZ+LZPT+CP0G/Q36B/Rv6L8b
-        6J+Q+P8K/QX6YxIbCAQCgcBzgAH7QzJmMmw1g3eWJFfypxlKZP9e8mdRyuYUkDOzjEuu4CmX+latvKcp
-        ZfFM/Odv//U76I8V+l1iaQZpfl/IeFGKfjSoR7Vu0ONdVtTB6wNfdVNYwfPT6Q+p6pcCxaKVoVaF/4Jq
-        xmwWafUpIzm0XyNPdanlN4RSNqeAnJll/HvKZhlQJvWxWllHUbcNWQYM/D9D/12hvyaWZpDGk/WnxPJY
-        UIe/F3XK9LfE8lhQh+bnRthvBc9Pp3+kql8ClIlWLXKR1hTN1SS366jV2BMMoyYEVfmDaClDQXn+XJRv
-        ND13UcTA/2ehCDL9K7E0gzRaedRk/QTjUauXqLudVgN1qBn9f6foDxAehnECUCJ5hVhTMHfTaQNJ+icY
-        RtWzKn8Q/TlltQQoz9+L8o2mZy6IGPR/KJRASd0VI02zkn0KKL9camWdLN3ibhsByu5NZqoeA8LDMA4G
-        CkR7Mle7TI+QFOkhFyvpwjAu5E6lLPJM1Mo4kn5L2T0LDPq/FkqgpO6VHml+nDuVsu+1018S6+Ogshd1
-        yVQ19oSHYRwIlMds991o0h5kd38nzRMMY1X2YFrCnUo5dCq5Vr6R1L0dtwQY9P8ulEBJiu96kOJP6UpZ
-        y20+t4Kye+7mTD+tbq57mLgwjAOA0pDrdPYKZSap7M26Ad4wjP9DS0yiKcesE86WLt2fHwIG/J8KBeBR
-        t1+cNH8rZGR63CkllbmoQ5US+6NAuXXCtFYfd6ZHXM0wPm8A3AgUhoziFYppNmn12LSNAN/ShhEZcmdX
-        ZQ+mf6YsbwNluMKNKnqkYfROWZbUXTnSeEZ3qc3nFqjMRR08etwJLMrc5UYViAvDeAIoi59iFC3tjmt4
-        wjD+L916xYv8r3Cjvihl+QygyJpWQYa6HyRpfoQ7lTJ7q9+SHudPp8xdblSB+DCMB4Gi+IlGUbR7FgGe
-        1Q3j1PIVdKs7lfwv64Mpy2cAReatFNzwlLQZpPkR7lTK+6+i/B7d7iLpAeXtdqMKxIdhPAgUxSr3E0eS
-        3Km7E2d4wjD+L92mK8j7Kjdqpud40lBkNWX/Winw2b2KqIE0j3enUlbvOotnLG91kfSAsna7UQXiwzAe
-        AAriMvfVxdR0JF98RbqhlLI5DGRcfRDqFl1Bvlf3w2cYRpSYp+xfKwU+DynMGkhTc6c+RolS1t6V9ZOM
-        /qEJEDxhGDuBctAsvfVF308i1anJAwRfGMZPusWdSr5Xu/KfcZcRJea5OF8zGH0W4ZmO3GnczGt1UM7a
-        ASWtFh/9hh/KeciNKsAThrETKIcnX8vYouaJILyrG8aq3Il0uTuVPK92o4oeYxhrq7iPh8TvfxTxou63
-        15DGW50ucZdnD5Vyi/LKekgb3QHKWTNuol2vADxhGDuAYpj9Psq7qGt7Bf4wjN906QKB/O5w56+vG1Bg
-        3tWDD0PFb4+v21VImtp+3PIHVSij9xq41xt8+DxsXO4GZTz8TOALw9gBFMMTXvV2hLr2juBf1jCS/sqr
-        GpYuPclOfnf0xUcYRu/u4sc+gX4X8Zm6r1uQxnud2tLuVMrnlfvVVnx6q+GlXQeU79QqHr4wjI1AKfzU
-        1WL38yZNGMZv6j7UeBTkpf9drJVhOqUirAmUl7evVDV2Ci/4MnVdt4D/ke5Uylc7nPKhEPj9uMNFlO/U
-        RAW+MIyNQCncMUNXntrTtDT64E+3V4Q0KxvGO08MX+JhIp/b3smbirAmUF6e66/6cm+FF3yZug0aaR7l
-        TqVs3or5YzXI78fd1aRsp54FvGEYG4BCuHK1KGMo5e5ObhQHqUxn/2ro0AEz0q1sGKeWbYcucaeSz50u
-        /XWvbKC8agpx87CI4gt+UbdBI82j3KmUy9tj/Zjd8ftR/yRCuU6v3uENw9gAlMHs/7rL1O26J43ewCND
-        2qssmy7z10C6lQ3jVc+qRtPdqeRxmxs10ZqGEcXlHSTZnP0pvuDP1LX8F3+RPtOlm8+toFy1en9NIggb
-        drXlClCu0xMUeMMw7gBFIMNTUxCj6fS9WcmAWl2th/fPlbaQNZRSNodA+ruv00x1pyL/7r82W3PbDMV1
-        yMApvuDP1G3QSDPkjTpXQOUqyiny9mKfXq8uDwD8YRh3gCK4wo067JAXsmTI95Rn82X+Gki7smEcvQfb
-        S1MXCMi/040qWu9AIkpL+2U1l2iT8hZfka45rQVphr1RZyZUnqJ8maqzc8If4SamPEMOQcEfhnEHKILZ
-        70Q9ZaQ8IFOnMz0lemp1SvqVDWNV5oU0bSKN7LvdqKL1/jwCpeXtgzVZcfg8xd+1jwb/4betXAnK4xnw
-        qqEj3HNTL+U+oDxDDDj8YRh3gCKYPUOfNmaQrdVjued2WnEjY0nDSNoVDIdoyj4ccu92o4rW0w9SWoUS
-        y9SkEMVXpMt05BVxy7sdKU/1NXApugriayvypWZJlOe0G1UgTRjGHVQUw2g6vbe4B/KwVxhOK21krGoY
-        77rDWNKUcwnIvduNKlrrjWAoLM+odSky+GsGTdR7p3F5d2qlbKLNGTrxNWO6TGegLCOv3oRh3ABK4ApF
-        e8kpP/L5EzRkgoecVQ3jnXcYLQ3XF8hcZTV8ytU9HCgsz33WNeOEf8i/ScC/9ClOyrH5GjgPxHvts8Qx
-        Zcox7L4lacIwbgAlcIVhXO8www5U5qIOQyll0w3STi1XJw295oW8FdyomdY5S4LCqrnPRL0rPc+gHXHF
-        LfvybcrhTSQ224v4pfdPKccwVy/pwjBuAAWgVVZNMYykx7U3ZV7VMK7059FDFwjIW8GNmmmNu4woK899
-        dqjxSee9Iq738Mayl+Ipw+5r4DzAN2QPbzQow9A/jCZdGMYNoACuWoEsdZp7D5R3VcN49x1GS8MWCMha
-        Ze800xqHEVFWnvvskAEi3anTrRnwL/lfhuTf9Bo4D/AdWm3OBvkPc6MKpAvDuAEUwBUrRpH+cPbWvtUD
-        yrqqYVxpVSUaskBAzkorYdH97n8UlafkD89ISOvJPHKncbnDKuTf9Bo4D/ANXZmNAvkPPTFL2jCMG0AB
-        XDlT17WKRxhHyrmqYazKu5GGLBCQc/dLC0q6/xwJispT8qf2vEjvrT66/MfwL+dOJe9a3ZqNNbzLrYTJ
-        e7ixJm0Yxg2gAK52YWnFs8b+zQYo43KGkXR3/KP9Hp1eICDjKq9FD92vI1BU3vWKU/sSpB+ybwn/ikak
-        tkfYtbKCf6mDReQ91I0qkDYM4w4qSuEK0l7Z7fv0HijbioZxtX24TKeeI+lXc6OK7r2vjpLyXv015CAI
-        cmquuW7lT5oh//c4AuTZ9Ro4D/AvdU+TfIe/eID0YRh3gBLQ/l9NOVxBWkHKCC31SsJUplp5h1DKpguk
-        W/WPpE+NUdKv5kZ9USrePUBJeYdAhpwKQs6ou5GeO/XyPTny7HoNnAf4h7yPdATIc8qeJ+nDMO4AJbDK
-        /TEZ6M3/abwKlGFFwzi1TCfp0AKBdCu6UTPd1w9RUrVVgmhIoZDjKf/uWQ5phq9ojkB5FmUQHVr6k65W
-        p8sNB3lOWZGTPgzjDlAAKyonGUkZ7FuUE/muaBhXdDlmOjSBJd3KdbpnLxwF5a0Shhob5HkvDuhdYQ3f
-        AzuCSv6iQweVSHd7nZRXkXem0/0AGWEYG4ASWNKdlejylSR5rWgYV7rDWNKhsUq6lfvd5d7AF1BQ3iph
-        aIGQV1OOoi6XIfy3X3Egr0OvgfNAuttP3JLXtDIgIwxjA1ACK7vpLOnKx/SZPHmsaBhXu8NYUtdkGv6V
-        3aii6+8yopzcu4vQ0NUK8rxXoB2503irO5W8hl7MV7pCTqbLXg9HXtPuiSInDGMDUAL6+6aVZ+8lyUhM
-        m5Aie0XDWJW1EHU9D/hXdqOKrr91gHLyDpBMKQxyh1wJgd9zPV7i5iGfw6+B80D6msxLjiuTz9SrMMgJ
-        w9gIFMFTVo2WphhIZC5lGEmjiUtV1kLUtUCAf/WJ2PV6AuXk7ftNcZMg1zPEXSsj+D136vSTnOThGZFT
-        S37Se6vQ6caePKa6cpEThrERKAIp39XddR5p/23YNSNkrWYYV73DWFKT5wq+1d2oomvvMqKYvJOi0wqC
-        bNd1m1iaoTSFDNH0F3CTh2dEzr4Iwdu3nL53Sh7T3KgCsmqGUStk1fmn0LAJDMrgKQrYoyH7QpJTyB1K
-        KZtmkOYJhkTUpDPgW92N+qJU3GvAQPbckVP3tZDvHfbpWp3Af8sKC/m1dhu1F3f53inyp7pRBWTVDONP
-        o6GHBFAIK/0v3hHSKdZTY5H0qxnGmeUZKbtJZ8A30o0608tx2el8TwmLZhsWb8XVZQDgv+ViPPJPvwbO
-        g+QUckXDVm41IH/6iVhkhWE8ABTCylcDWkiK97AnhbSrGcaZk5XR/5y/aUyIH7361bOatV95zV1GBrGn
-        DC/5L0Dy8Yxy18wA/kv/zxDZQ14D5wE5l/+rP7KnG2PkhWE8ABSC9hvvfFXcKDo0Pki3mmGcNlFJ8keu
-        ujbbnPjRblS9XH1W+1xzbY1B7LkzL3kNGfl4btyuAQT/pe5U5A55DZwHySnkZhqudAXkevkNPZWMvDCM
-        B4FS+GWNI2lWM4yznsPrIBqfI1ekm14s4keu7l6LET5nGcYpY+sDDGBPGYou8eWSj3eqtGu1B7+3gpuy
-        T4rc2oRi6GElySvki6asgpHrGfqhMzTkhWE8ARTDTzCO3W5V+FczjFU5AygbxtGHrqr6nPDRbtTXgorP
-        Wa7m+fe5NYCLAZ1p6iGPEuQ36hVxNTlTTtZW8hENfWiSV8jPNHzSgsza3cnhe5rIrPW5OJXaCRTEI04R
-        bpCMY3M/hncZwwj/zDuMb93L95ErueoqnfDhbtQkd9bzmn+1iwHsGaRr/LgJ5OcZgN47jZ6cYfepBORJ
-        +dXyGb26uuSVd8jzPAfDZ2fIrBnGuMd4ACgJ/e3RrEMOV1DzBBzelQzjzCs0b28D30caraqnifCR/ec9
-        jvk+6y+5pp0beQFl5Cn3qScfayDPIfco4b9EwUteIT/TjJVcLZ/R+36eG3XohEJAZhjGgUBRzDzocAU1
-        TSbh+xUN42g354cng9+j5b8n7Hyf1kYpizlAGXmHXqa8Am4P5Dtk9Qr/9NepIa+WxxTlLrlFPqIr6jPL
-        BR2GcQJQGPq3iyeuHpv6GXwrGcaZZfnQd/we+Uw/DlTye7Qb9b0w4PvMycPwBcgLKCJd5PauSQxfJbSA
-        fL1VS5ehhn/q6gc5U14D5wG5s+tzmRtVQG4YxkmQwoCktJ9mIHe3BuD5VQzjx3Usfk9zp/J7ZD/5cotX
-        eEbRnCtrKCLv7uKUVUILyNtT0DLgzTMEeD05Q1bCyJnyGjgPklvkk2nIdRrJKeRmmlWfMIyTgeJ4moHc
-        1TvwrGQYZ7quZ7s78+GYaW7UjArPKJpmGGvuOdH8OyIbIP+aS0/UddgE/pqcUa9qm/YaOA/Ir7mZhxgT
-        5FzmRhWQHYbxIqBAZCDlYn3Ci8g3J2LE/xKGMWXxAcKHu1P5HLkSVfm+Fi+EzbpWNN5OoYS8FZVo+jHz
-        LZC/txrrUpzwe6ug06dGkVEzUlOvtyC/uh+cog8DGZe6UQVkh2G8ASgTvWZMd8tWXUVu9jniVzKMVRkD
-        qDohJXykEXvpKj5H9oOqN47w51zyRwl5JypvV06Uwdu/EzUbbfEWaTOdcqeSfupr4DxIfpFfplOGnvSX
-        XG+xQHYYxpuBYtHBCCnblYzk5jF84n8Fw1gdB4QPd3tWws5QVQ8R/veCbxSN1xcoIe/051Tl3grKMeQV
-        dfAPf+8n6b2V6NSVNvK9CcOplR3pa31h6j4z8sMwLgSUjJTkLAXWRalIVRC/hGGEd+ZpS9fzRNzIScxI
-        17qrU4mb9czG6gsUkHdhXKS9Ju093k2e4e5S2PAPX2WRdvpr4DyQT20v8PBlV9Je+gq9DOSHYVwQKJu8
-        H3nn6+bcQxXE/QqG0XUREjf6asUocvUFcdOeWcpiDFBA3t3Fp1Cziw/e4f8tWJElmmpIMsinZlBEh1ar
-        pLvcjSogPwzj4kDx6KUBd+xHupNW4lYxjDPLsWUYR7tTR5GrL4hb/5I/ymdr/+4p1Hun0XPLdl8QJc0l
-        r4HzQD5e/odc4KSrrcznvm4JkEcYxocABaRV5JUrlS3D8CsYxs1rCMSvdnBq01tG/MzV9ZgrGygfz7X4
-        JOraI4Tfq3O3MSHNZa+B80BeQ/7VnzRT70ZugTzCMD4MKCGtVq5Qyk8wjDP3Y/cM42ru1L2TxPI81NKN
-        oGGG0bsj+DRqNmrweqvkI8ak1n6XKnTyG3KgiDSekZ9+XYc8wjB2AiVw6zUqgTJc4cp7gmG89A6jBTyr
-        uVN3+2UlzShy+0ozUDzeCkEkRbUiefuhXUZN/EX6TD1v0/EM7PmH0wHy81bAXfuC8N/iRhXIR8+2zDsM
-        4wZQAjpFOGaGfAKUYfbLyp9gGKetnFMWm4BvFXdqk76opBtFQwyjt0LoXjldBcq2tSfaY9RO/3WTeIu0
-        maYeVClBft79zOZOAu9tblSBfMIwdgAFkO+cSSFe2t9KkP/sFcsTDGM1/QBqNTSruFOb9AV8syZT53UG
-        isd7YfglB0eOgvJ5q8beO42n9ubgvfw1cB7I99RqD97b3KgC+YRh7AAKwF6fWME4WuU0mpY2jPDp7UHV
-        9AOoaQzAt4o7tUlfwLemYUTpeCumS+7fnQFl9Mre5faD3zOwTQ8XvpoxumW1Tb6nDgHBV5skXOJGFcgr
-        DGMjGPy1U323GseiLKNp6esa8M08Zdl87Qveu92pzeMVXl37qck4S+cWJigdb4/tkvt3Z0E5vQv/zcoB
-        Xs/A7q484bnlNXAeyNery+7qXzxFmkyXuFEF8grD2AgGv3cC8jbjWJRjNLn7qMStYBj1AoRq+gHUvB0C
-        793u1GbdB++055ay6AcKZ2uf7vaTbi2gnN4Kqcuww39opQTPLa+B20KlLKLdO57iKdJkuqwu5BWGsQEM
-        /L2j7jKOl26FkN/MFZPI9XoQt4JhnFmGHmMz06XbQs1nPOCdOZk4NjlE4XhK/TGKiLJ6B056XxF3yCgQ
-        f9tr4DyQv16d110meG51owrkF4axAQz61lXB+dN5jSCvmSuVTdcY8SsYxtvuMJaA/66/EuvaQoJ/vUv+
-        KBzPDXmLG/AoKK93B7N5xizeIm2mTTdihV90qxua/Lv/XJi4292oAvmFYdwBA15vnKkpAo90wKF5Fn8E
-        yJ95WVu02QeIX8Ewzryu0rX6gX/W3t0edXkp4J9pGPt1F8rG2xu75TTlGVBm77pE7yviuk50Enfra+A8
-        kH/3lQvivBXzVIVagvzCMO6AAX/ECMi1Om3Ci+zZLxffXPkqvuAfSimbTcA37dBLyqIZpLnDndptO0jT
-        O8nroX5vCcrGU4SPOHRjQZlH3WnsuqpA+KkToDNBGbpOyhJ36srKKJBnGMYdMODPKGCtaoa+DAB5Vxz2
-        2Cwz8SsYxmraAXRosUK6q92ph/6AoSJnFPXrL5RNTRGKbjnNdhaU2zP0zbNkeL2VVnXmQfjtr4HzQDmq
-        7ZGiP0C450a93KVOnmEYN8BgH/UnsqcNJOk127/ivxp3DQM8txpGeGa6kg/1f9Jd7U495Ckj3ayVdl+7
-        oWg81+OlBy1GgrJ7yr2rTvDXVlpfB1cIW+I1cB4oh9ceX8qQsCXcqAJ5hmHcAIN99CpALlCdDGw+eQyv
-        DKIM0TTXYUG7KxF47jaMM/fKjhrGK92phw8cknbW3mzfShtF491dfNShmxKU3ztM1Dzo4fXcox8raX4v
-        8Ro4D5TDM9xfrnLClnCjCuQbhtEBA332dQgZSa0ytCpVXiXJ+Nzxb/67K1t47jaMo1byNTo82SbtVX8s
-        fXgLjrTTDi2lLPaBkvGuN0g53r43dgaU3zNqzR0LXs+d+vHg+V1bZS11cIny7P6rP789A3/LJIl8wzA6
-        YKDPPPW4KjWtROC72zDOzP+MYZx5T9DS4QUBaWe2XduiCCVTUzyiQxunK4E6jLrTuOtO1e8iXnTLKssD
-        5fGe9buz8P30v4uMBPmGYayAAX73pe27qGmCBt/dhnHmAaTDe8GknX2NRnTYjSqQfuaza2s7lIznbjy1
-        Eb8KqId3p7G5fvB6BuU1K9JnEZ5pKVc05dksJ5+eu/U2A0/eYRgrYIDf/ZqvO6hZ4cJ7t2GcuZo/pZtJ
-        P9udeuquM+lnuqH3dTIKxrt3d8rirwTqcvpOI7zeyvPlTuVzudfAeaBMtf3DV1vwuZQbVSDvMIwFGNxX
-        zPpXpOZTjvDebRhnXo045b0h/Wx36im9R3rtX9fkjqB9NzQKxjt9eOnbTWaCuniroK79P/hrK8+XDD6X
-        ew2cB8pVK+tWPUS37TWTdxjGAhrcxWD/FajrmcN/t2GsphtBKYvDQMbMidXpmwzImGkYtxdEKBcZDO/u
-        4qMP3ZSgPiPuNHqrQu8axJIvRqBc3qrQ8x7cuk9K/mEYCzC473q9112kayBdqxD4bzOMxM80PEMm3MiZ
-        dZp4yKKqIncUbesOlMtpF+NTQJ0849Ws9OF1D/JUwkS3vgbOA+V6VD3IPwxjBQzwX2mPsduVT5o7DePM
-        Fc+Qvo+cWft4QxZVFbmjaHtiIeVSKJtMSyr0s6BenuJvnonC6x3kqdGyq27K1lqP26+bUIYwjA4Y5L+C
-        cTzkeSHdnYZx5r/mD1m4IGfGO0mHeZeQNW2PNmXxDRTLkGsMTwJ18+40Ni/9xVuk9WhpxU35vLYo6Xbv
-        AWUIw7gBBvpPNo6H+x9p7zSMM/Me9iYtZI12pw47pIesmad664shFMvpi+9PA3U7PRmA15NR0tLtSPk8
-        13JJt3sPKEMYxh0w0K+6tH0l6UrBYa8Lae80jDP3gIcdjETWSHeq9oGHecmQdf1/WaJYTrsVnwjq57kQ
-        m9/SAK93ctPSEq+B20KlzCUt8dYeylEzjOq/Cv+p1D0ONdihq95VOpu0Cj6lZEl/p2Fc9g5jCeSN6jND
-        vUvIm/n8vle2DLrTB1GeCuroHThq3seA15ORaQmDsgfKuWfglziERTlkKGrl+8l0SPkx4LVv9PTXxA05
-        zY2cOw3jzAv0QyfdyBvlih/qXULete5oBp13deFHHrqxoI6n7zTC68nI9IgJBuXc2y9doj9QjjCMnWDg
-        y0X2tNWjyjuszyHrTsNYTTOCUhbDgMwRB4WGLwaQOfMA0+fkiwE35LL7k0FdT08M4N1abd32lpgeUE7v
-        9XCiZfoDZQnDeAAMfq0en3LfUavcods4yLvFMBI347Tnm1I2Q4Hcs5Oo4Xe2kXndlRcG3GlX4tNBXU9f
-        ZId3y536mH1ayurtNS/hRhUoSxjGE0AJ6LL5qidXdSR/imcCuXcZxuXvMJZA7tkJ1PAzFZJZ5DGSPt/O
-        w4DzDp/86EM3JaivZxCaNvzFV6TL9KjrLpR3ebc6ZQnDOAAoAxlIKcAVXKwyiFM9K8i/yzDOdAHOMoxn
-        jNA0nVfJaxilLAKBQOClbOTq0x7kHX8wrDwvmXSRz12GcWa+0zx7yD56oX7a1bRKXsMoZREIBAKfQEFk
-        IylX64w3jWh1KtnKY9k3QQUCgUAgUIWMF6Q9Mq165HbVoZiW6x8ygOLTilBp5U78pbZnAoFAIBAIBAKB
-        QCAQCAQCgUAgEAgEAoFAIBAIBAKBQCAQCAQCgUAgEAgEAoFAIBAIBAKBQCAQCAQCgUAgEAgEAoFAIBAI
-        BAKBQCAQCAQCgUAgEAgEAoFAIBAIBAKBQCAQCAQCgUAgEAgEAoFAIBAIBAKBQCAQCAQCgUAgEAgEAoFA
-        IBAIBAKBQCAQCAQCgUAgEAgEAoFAIBAIBAKBQCAQCAQCb/znb//1x0R/SEGHoPRZVgoKVJDbCPpdCuqC
-        0hkZHv0+sQd+IHi+e33g1FheBaY+h/uzkVGjH9FOs5Da6O/QPxLp+6+h36no36D/TnRIWQuk/XeS8fcU
-        FKggtZHoUAdTOiNji/Q81JH/nJIGfgh4pi19QM//t5TkkTB1OVwPI8MjtZN0YEwmDWiPP6f2KenRfaoZ
-        VPRPptKHlKjS1WTw/bWKTD8DwLTTCMP4TyjP5kQ5vKR/QY8xkJRVdYx+4yC1T362tg/ou33uOf7whPdO
-        mDqMMIwaA3as5Im8pZhEAtqh7F/S7wr7qz4TT/Za/NwJBZVTp3k1QgrqAum0MlH6f6cghf2WwkR/TcG/
-        PEybjDCMVRmJ5y9QqSilEJZWkpTP9ptfY3baCdplsw+kePvsH+nFMeUfYRi/ZBD2e4VD1kj+8hMy2iB7
-        EdUuVX1BuO1fP7PNqJhmArmSXTMA+DVzyGn/loIVLiWcw/+Rgk8BOSqn5D52ZpfaQzTNMFokftuJ9X1Z
-        40jZhvebnwbaZbcPEK5x+WjlZco+xTBmECfPVjaO/0rBvyzUBqkt3AVNinfbljCNY9Fz93EpvGZOuZJ/
-        ScFNEL9J+24EvlsX7eGObYGcrDSHyLsDqfyiSwxjBrx2L3lZ40i5YsW4A9qlqQ8QZ8f147w2puyH+0Gr
-        DOLtdtAvvd9o2sG1BcRlXawJxZfxS3Gix03IPkAF8uyya8a0lY4wzcSGzRiQFYaxUSnWAL81jssqSso2
-        tN/8NNA2zX2A+Dw+H7f6TuUWXWEYrefr2cr8JFrbQfFQdRLRKmN5UAE7Y2pSSvAdXmkeAXmEYfyfznhY
-        BmlyG4riJN4DoedunuGe8sqToTCMOzC8z1bmJzGiHUbIWAJUwM6YmlYT4jNpTitZZGilINes3Gm15fnt
-        hpG8pZRUvkxyGTe7JeHN7XWowyjdGRmk6XavKR/I1lmTqObnDa/6ltLk9MMGC7JUHytb1PVMaiC97Ysi
-        5dEkEz7lP6wsJZDXYxjzwbhdwwiP6mzbUvU/vHInrcpp21Bt0dNvch2nG0biVffM29w/xQvl+om6xkYJ
-        0pby/pSiulCR01wu+LrboUSvDPim6YjToDBfp0u3AF/epK2eektxX42j3zku/VantAcFRK8Tsny+eXfo
-        lYc+y7AtwKOHIF5XcRCnh6ZJQO2IdybNzF8KkM9swL9kpnDRoQevdANk5Ofsus2JU53VNlt1Vj03FSfx
-        ngz1na9BT1hT/YhTn7Gr35KUp/LOzySHf8hMPAp/PSs+t+RKpnvwiziVPY+JMt2wyRyymvsA8ZtjVCBO
-        CqlW7kyKaz7wBu9ev9FYeSlpPj/a3yKFi64wjHllvav74NHYEP9WHTfHRop/8aXfmjR4z0DhuxMUeA6P
-        WcJsn9qiV3/jMz+3lw4XFJfDtiixv0HYW1ZBqvehicFQqBCmUJsFIt42QnXQmPhSGdm0mvHXHuRrNcNn
-        7wOz/JtKQ4DHHZgC4VKUZfnUuZROg8Ma9FcHhj46vUUKF+2WrQalGyBDijDL+JpFEqY62EGq76qr6iwq
-        JzHe87cHs7KMUqF8pOX3bv2UxvCIVB5NXGrl03cpjPz7Qya/xa/wl8KActlsncv61gx62U80+VCZbDu+
-        T22fAXKa+gBxtv2/nhFhapc8Scqk37kd9d3WabP8xEte2VZqV7WDyMZJbl5Zv/iSmDdSuGiqYSTO9qc9
-        A1o+56Nj460jxJO+i5Teay93xUfcqTHL7149m5/bKcPI77ccSGVWvcs+uYRxzA99bxCo0cUn/qqrKMWL
-        SmVkGzB3EDXGaybDp4zll0zCMu9WJ29SGhmSlXhrA7McBOKtlUt55rKJP3fCVQ2j6lWVkeJynfXpDWzx
-        2cH20Xn5LSWZ5ejZvtuN73q+Oe3HqpXfm/UjrFQi1TYgXHnkZ2LLWdY3P3/xqLyimuFTuXJ9agfN8mAW
-        z8eMnN95rIgOu9kykLHbBwi37VT1DBCe20ckhVTr23qOist8Vb2Q+D4mAVBt0qXnYhVf/n6pYeS3yivD
-        bJ/N5j1u4lvHhp6P2+cEwnLb5zar9mXC7HP02v5ouaoGx8RX+5ZA3JdhtMhx0JaMQzriFlAIOwi+BkoG
-        cblCrgFN8aKPxtFvE7cpwwK+ywwjv+1AV11bXBl2kH3JFEzcbtlqULqzMgQj4+PQFL9zZ9ytM/FqI8tv
-        O7Ytp6cgvyYa/Hbrx2+lyf1O+br9MwOe8pmUMt8DPJFbZ+LsCqyUk8Orh9AIrxqKI0CObSOVSb8zqT5W
-        +VWfI2G23lVFalHw1yYO1si2yLMKXzTbMO6Ryr/Zn4hv1geSBb0Vu36nqBf4bdvrY+yUIM724S8+woaM
-        2YwUJ3L1C3Hv/pCCPpDjoC0Zth8364hbQCHsasKbedhOvVXxKo9+m7jm2QC8VxrGLsWRAa9VSk8wjO+2
-        5Lt9rk3uC/jUeWuybDmbO3aRruw3WUFoQDcZGfjsBKcm0z7n3Qma4f3ogya8qd3OgDxsG6kt8veSNF5q
-        CkdtktM1vxUH3jz+tlb5zdeA4LUrx7sNYyb1sZqxaNJ5FvBZXVpOQK1h3NQvxFs5Zf8dNmYzTJxbT6XL
-        fCnoAzkO2pJxSEfcBgqZlftXZxUIzx1606glHlH5MG2DNF/zgPdKw5iVabUNPMBv83+CYXy3P9/zc+96
-        NSD82WC9+wPf7WBu8ggI8Fbrx3cp8xzepSjhd5WaZJm4zdm2AE+1D/I79xe14dRBjnzbRqqbNY7y+GgV
-        6U4cUnzmb17FwmvPILzbiu9ZH1RXIB7Em9KJZhtG9VG1W0mqk9rMTp6+nmEKU1yvPsht8zGmJCeFVw1L
-        icwLeR6e02M2I4WLXP1C3AjDeEhH3AYK6Q4cfjcrKMNXKiN1yGrcFuC9xDDyfXfVvAXSuEY1hYua622h
-        dANk2BnjW4YJa56sCPBbw/NWKHy3s2IN4BYXW7V+SmvCm5W5AL/tsx9txu/NAV4CPs8w2jEjAyG5XeVs
-        BXI/2giyBmt3xQZPVVm3IKUT2QlVc94lSJPLMtsw7soQj+G3+sD2ny59AP+7X6SgF/id+1GToYUvG8Cy
-        3+VyDRmzggl39Qtxpw2jQLzVEfrerW8vA4WzHaGcoTTPNg1fqYzeAzsFNQH+qlKyIK7LcEhW4rUDwcro
-        Vm6kaRnsu2WrQekGyPia+UuWCdMz1u9Wsn3iXSa+qx/Zji+S0dBstdquhEteTVaXAStBujxZ+Wgzfme5
-        TUYCPrcPKizFWVJfOPScPEiekf+SzWfuc6JNlxrxuS28VdQW5Txe9efTTiK73ciSk9LebhgF+L76sj5N
-        2JmxYVfZuR+1Gsavfsd3yc+yh4xZwQu3IG5zPOY4aLPvE9+tI24FhcoDrdxPaHYpJD5R2fB6MK+4FNQE
-        +F2llEHcW7a+p2AXkpV4rWHcfOh7MOlXNYzZjWL/DcXKPUNfZSJMhrjs/KKvk5D8rtaP726btkDpUvqP
-        8vG7S674En+1DxKu1bja17o3X/KhIQMdOV9txKcUTM5Tn65LM/GcpVf9+TzVHyUnpd0aK01GrYYjMuDN
-        E4feK2N7ZPtz7keH+x3fp4xZL9yCuE0dmeOgpj4Bn1awuY6WvnTEraAwtVWFdcG1uMUyb9nw7weagpoA
-        /6ZSEojrGqiSlXjfHdSEHTWM+WTv1mBv6jAllO6MDNJYb8Dbry9ZJlyTH7X1EXL36YhT/1HbWKOhvKz7
-        tVo/vudn0u3+E0insn3IFPjtKuYaxJf4NxUt8WpnDXa7d6V6u+3TCmR4bWTH7NaF/syjstln10Ov8c/n
-        2f7otn8KF11tGPPE8VUmPoePjfT7ncceDL9nGIeNWX5nme7zJG5TR+Y4qKtPwF/VESl6DZjC5ZlTVvib
-        M9KMxCsqldH7gaagJsCvh6h0sw3j2cGey7k12LvlCkp3RgZp8qAX2YF6yiXWA+TLaFjXnzfY3/UTTw5P
-        QV3IaaGPNuP3FMNoId6UpjmfLSDD7QP8tu1anbwSnr0+pw88IKNrslyCNC2TyOa2LnFEBrwfZeLz1Jir
-        QbKTvMP9ju/DyyW0yCRuimHMIF3pYj3cB4aDwny43Ph87028GHaQeEXl4H0/0BTUBPh3lRJxXZ1FshLv
-        u4Py3Q723k1tuyLbGuxHO8zhwQC/3XD/WlGYuO5DFEdAPrk/vWeEfK/Wj+92NdRluOG3Rr/si9MNoyD+
-        lE50yqVKercP8Fv9L7erJrBfeRFW3SY5ipSP5HUbWpUhpd0aK4eV4hEZ8H4YLT7tmB6ioCU7yTvV71KY
-        aNiYNTJd/ULcVMMokNb25aZ2ugQUxioUO7CbKuvx63eOS0FNgL9JKWXZ0K4ChScriY+G53eeVXcpD/ht
-        O20N9kMdRumOyIBXhiUrsOqKn7DcFk0egQx4VWd14K4VQ0r3qksKcuvHdw2SXP6uQQK/XSWXfTGX4ZSC
-        2gP8h55bDXuyivhaH7QTpJ4+pAmjnoHazLq/bfs2G31498qZ4w4bo14Z8FWNIN/zcz+iD5S27HdZ3ql+
-        x+/3JAc6Mma/dCRhkidy+wZxX2PXIsdBZ/t6zmfIJG4YVKBUsEzNBTRpyk7xHhApqAnwNykl4nOZN2ew
-        xLszQX5b5dG6QtZEIitv0dZgP9RhlK5XBnzvTgypfNV9LsKt7KYZqGRBHwYrhelZbQ564j/2cgS+u/Xj
-        d3ZxiZqMsGSYNDWZuW0OKSg+1YdUD7WBq5iIsyveaSvGDMJtW32NF8LyGGlWqPDlyeJHXfluPSyt7WhX
-        A9V0Jm5zvG+hVwZ81hX9fk58t/qgVZZdWHzoEH6PMoxDxqxFChe5+oW4VsPoufMP64glQIHssV5R85Ld
-        pCmV0fthpqAmwJ877eZmLPHWELirRuI2Z7qE5c4o2qw38XrQ5STiUKfbgtK1yCBOikfPzpbJNYoZxFvF
-        sOlGliwoDzB9vtqQT6tEtgZG5nm3Ld/d+vFbdcr5iTaNI/G2fJ7Ms4bRGgXvX2ZU7i8PBN+VVvl3GUr4
-        WwxjaXjKAxbWUKtsW0ZdsuxY+eoXhFlDLN49edbI6nNrrEw3jMRnRZ35v8Z7Ed/T995jI4PfWdahfmdB
-        2Okxa5HiRFv6Zc8w5vJWFxWE9+qId71TePe4GQplDuXCiZoLY9KUyuioYbSNqYGoASZSuJ3BKiw//Mz7
-        LoO+Q7YzVY0e4XYAi6Royrz0kCQ/5yel4Hb6FC5yO90WlM7IUF7qIJlUDuVty5xJ9XWVVYZ4IJte8j4m
-        F/zOCt228Ufn5nduA5HK9e43fFcbVgcn3zeVPmF2YItq5RPPhyI338u+qHq85KSgTYgv8duBmmW85EBl
-        X7Pt+Sorn2Uf7RlXm22UUfB9TSYJs22ksqid7LPIY8saWNd7Qlw5Vkp5Zb8Rv/qGvs82jHouyrskhdv6
-        Zd6vsaIwqHVsWHlfk3PClPYlIwVtwvDXDOOQMZth4rf61ruOKegDNh56GWs+VYZ3nny3ZRb/lo54PQ8+
-        JSOneYffAjJvWqmVSGlEpTJ6D9gU1AzS2Ma0VFOOZYevUYu71RrRLXrJ4tPt9Clc5Ha6LSidkdFCUn5d
-        ecGvOuc67JE6Z23gl4O1RkpbrmR2lb7SQHuyM70Uifld9sU8gE8pKH5bI+ORNablc2x+RkXazXTEZ8Mj
-        qq2CrALbo02viSCeIo1Hakf1Ebf9U7hohGFspc28iO8dG14fdnVEDYa/Wj7CT4/ZDMPn9i3i3v0mBX2A
-        cJVH+WRZll5jns9uHcH3ctxsesCmIhVGDdE8eIWURvQxG9bvHJeCmkEaNaaUkG10Ne7X7Icw8WrWWmt8
-        GTu3c5SAV22gNLWHrfB32/Bdsx3Vr1amapu0QumMDI9U565nVYNkQN6kQG2qvDZnbMTX2l9tqGf41QYK
-        g3I9NtuIeLVzrXxZvh2AOe6jXfQbUl7V2XMJ8SX+r/ZVGFQrz0f/yCAst4s+m2e+8Da3kWB4RbWVkOSp
-        vWoTydyWzf0J3izPGyt21eC2fwoXHe7LRsYe6bn2PAOv74n0PNXvXXnEuTqiBsO/2RaKh7bKJRl7Yza3
-        idu3iMvPzdXhSg+VZVEZPurA72YdwW9rTNe63/hU0JBaaTR3fg+SAalj7Cqln4RU58MztLPtRXq1uxRE
-        lxz47X7a6effAuVzVV6jQbk1Tg4bI4vUDj9+rKxax1Su+1ZVnfjp/SQQGA4GTV6B7Lr0LODXzFPp1jry
-        HQgEAoHAGRgDJ2pa0cBnV4uH96oCgUAgEFgOGDbtWeRVoz73jqZr7yIbRe2fPdK1GQgEAoGAC4yb9r/s
-        oQ4ZPJ2E1MpQ+ykiHQqwB0nE/5h9lkAgEAgEuoCR08qx9Wi6TsXFSjEQCAQCPx8YPK0etTqUkbQkYyg3
-        apxwCwR+WfzHf/x/QP3qcaD0UsEAAAAASUVORK5CYII=
-</value>
+  <data name="awesim_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\awesim_logo.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="bolt_gry" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -3773,5 +3565,8 @@
   </data>
   <data name="putty" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\putty.exe;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="awesim_logo2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\awesim_logo2.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
