--- a/AweSimConnect/Properties/Resources.resx
+++ b/AweSimConnect/Properties/Resources.resx
@@ -3569,4 +3569,7 @@
   <data name="awesim_logo2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\awesim_logo2.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="awesim_ball1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\assets\awesim-ball.ico;System.Drawing.Icon, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
