--- a/AweSimConnect/Properties/Resources.resx
+++ b/AweSimConnect/Properties/Resources.resx
@@ -3572,4 +3572,10 @@
   <data name="WinSCP" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\WinSCP.exe;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="osclogoicon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\OSC_Logo_Icon-Only.jpg;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="osclogotext" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\OSC-logo-txt.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
