--- a/OSCConnect/Properties/Resources.resx
+++ b/OSCConnect/Properties/Resources.resx
@@ -3578,4 +3578,7 @@
   <data name="osclogotext" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\OSC-logo-txt.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="osclogofull" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\osclogofull.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
