--- a/OSCConnect/Views/ConnectMainForm.resx
+++ b/OSCConnect/Views/ConnectMainForm.resx
@@ -120,6 +120,9 @@
   <metadata name="toolTipNoDelay.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>135, 14</value>
   </metadata>
+  <metadata name="toolTipNoDelay.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>135, 14</value>
+  </metadata>
   <metadata name="timerMain.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
