--- a/OSCConnect/Properties/Resources.resx
+++ b/OSCConnect/Properties/Resources.resx
@@ -3584,4 +3584,10 @@
   <data name="WinSCP" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\WinSCP.exe;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="awesim_ball_sm" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\awesim-ball-sm.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="awesim_logo_txt" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\awesim-logo-txt.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
